# domjudge-ansible

./: .gitignore  README.md  pyproject.toml
workspace/: ansible.cfg
workspace/inventory/: hosts.example.yaml  standalone.example.yaml
workspace/playbook/: domserver.yaml  judgehost.yaml  site.yaml  test.yaml  ubuntu.yaml
